--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,12 @@ import '../styles/myCustomStyles.css';
 
 // Your App
 // import your <App />
+
+import MyApp from '../components/MyApp.astro';
 ---
 
 <BaseLayout>
-	
-	✅ Check ✅ Check
+
+	<MyApp apiSection="ability-scores" apiDoc="dexs"></MyApp>
 
 </BaseLayout>
